To fix dialogs getting hidden behind navbar in smaller screens

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 #simplipass-navbar {
   background-color: rgba(80, 187, 219, 0.849);
+  position: relative;
 }
 
 .navbar-brand > img {
